Fix tooltip getting clipped by avatar
fixes #1861

--- a/astrobin/static/astrobin/scss/astrobin.scss
+++ b/astrobin/static/astrobin/scss/astrobin.scss
@@ -3016,7 +3016,6 @@ ul.astrobin-users {
   .avatar {
     width: 194px;
     height: 194px;
-    overflow: hidden;
 
     &:hover .icon.edit {
       position: absolute;
